mailserver/ingress_tcp_stalwart.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-imaps
  namespace: mailserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - imap
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart-mailserver
          port: imaptls
  tls:
    passthrough: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stalwart-submission
  namespace: mailserver
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - submission
  routes:
    - match: HostSNI(`*`)
      services:
        - name: stalwart-mailserver
          port: submission
